@@ -1,7 +1,8 @@
 Changes in openair 0.5-15 [2011-12-08]
 =====================================
 
-*       Update to [IN DEVELOPMENT] GoogleMapsPlot. 
+*       Update to [IN DEVELOPMENT] GoogleMapsPlot.
+*	Tidy up calcFno2 plotting.
 
 Changes in openair 0.5-14 [2011-11-29]
 =====================================
